[scss] fix editorial tiles display on mobile
Bug: we shouldn’t add side paddings/borders to editorial tiles on mobile, otherwise they’ll look like they’re offset.

--- a/app/assets/stylesheets/redesign/layout/_section-boxes.scss
+++ b/app/assets/stylesheets/redesign/layout/_section-boxes.scss
@@ -384,12 +384,16 @@ $top-overlay-margin-top: 37px;
     border-top: 4px solid $c-neutral-white;
   }
 
-  .cta-item:nth-child(odd) .category-tile {
-    border-right: 2px solid $c-neutral-white;
-  }
+  @media (min-width: $bootstrap-md-width) {
 
-  .cta-item:nth-child(even) .category-tile {
-    border-left: 2px solid $c-neutral-white;
+    .cta-item:nth-child(odd) .category-tile {
+      border-right: 2px solid $c-neutral-white;
+    }
+
+    .cta-item:nth-child(even) .category-tile {
+      border-left: 2px solid $c-neutral-white;
+    }
+
   }
 
 }
